# pythonmyadmin

./: .env.example  .flake8  .gitignore  Makefile  Pipfile  Procfile  README.md  config.py  gunicorn.conf.py  log.py  main.py  pyproject.toml  pythonmyadmin.ini  requirements.txt  setup.py  wsgi.py
.github/: CODEOWNERS
.github/workflows/: linter.yml  python-app.yml
Dash_App/: __init__.py  commands.py  data.py  layout.py  table.py
application/: __init__.py  assets.py  dash_view.py  forms.py  models.py  routes.py
application/static/js/: main.js
application/static/less/: controls.less  filter.less  global.less  header.less  table.less
application/templates/: head.html  index.html  layout.html  nav.html
clients/: __init__.py  database.py
cms/: __init__.py  dash_view.py  models.py  routes.py
cms/static/js/: main.js
cms/static/less/: filter.less  table.less
cms/templates/: index.html  nav.html
pythonmyadmin/: __init__.py  assets.py  forms.py  models.py  routes.py
pythonmyadmin/static/less/: filter.less  global.less  header.less  home.less  index.less  main.less  nav.less  table.less  variables.less
pythonmyadmin/tables/: callbacks.py  table_view.py
pythonmyadmin/templates/: database.jinja2  head.html  head.jinja2  index.html  index.jinja2  layout.html  layout.jinja2  nav.html  nav.jinja2
table/: __init__.py  callbacks.py  data.py  layout.py  tableview.py
tests/: conftest.py  test_table_fetch.py
