[tool.poetry]
name = "pythonmyadmin"
version = "0.1.1"
requires-poetry = ">=2.0"
description = "Web GUI for connecting to and managing databases."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pythonmyadmin.com"
repository = "https://github.com/toddbirchard/pythonmyadmin/"
documentation = "https://github.com/toddbirchard/pythonmyadmin/"
package-mode = false
keywords = [
    "Python",
    "SQL", 
    "GUI",
    "Admin",
    "Admin Panel", 
    "Database",
    "RDBMS",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Framework :: Dash",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "*"
flask-sqlalchemy = "*"
pymysql = "*"
flask-assets = "*"
dash = "*"
dash-core-components = "*"
dash-html-components = "*"
dash-renderer = "*"
pandas = "*"
wtforms = "*"
redis = "*"
python-dotenv = "*"
pytest = "*"
black = "*"
isort = "*"
cssmin = "*"
jsmin = "*"
lesscpy = "*"
flake8 = "*"
cryptography = "*"
gunicorn = "*"
loguru = "*"
coverage = "^7.6.9"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/pythonmyadmin/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.isort]
profile = "black"
src_paths = [
    "pythonmyadmin",
    "table", 
    "clients", 
    "config"
]

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120
target-version = ['py312']
